# tabletop-mini-tracker

./: .gitignore  .gitmodules  Cargo.toml  Vagrantfile
data-collector-rpi/: Cargo.toml
data-collector-rpi/src/: main.rs
data-collector-screen/: Cargo.toml
data-collector-screen/src/: main.rs
duck-hunt-firmwares/blinky/: Cargo.toml
duck-hunt-firmwares/blinky/src/: main.rs
duck-hunt-firmwares/inertial_measurement_unit/: Cargo.toml
duck-hunt-firmwares/inertial_measurement_unit/src/: main.rs
duck-hunt-firmwares/light_sensors/: Cargo.toml  Embed.toml  memory.x
duck-hunt-firmwares/light_sensors/.cargo/: config.toml
duck-hunt-firmwares/light_sensors/src/: main.rs
find_worst_case/: Cargo.toml
find_worst_case/src/: main.rs  receiver_placements.rs
imu-toys/imu-nrf52-calibrator/: Cargo.toml
imu-toys/imu-nrf52-calibrator/src/: main.rs  registers.rs
imu-toys/imu-processing-tests/: Cargo.toml
imu-toys/imu-processing-tests/src/: main.rs
imu-toys/imu-rpi-calibrator/: Cargo.toml  Makefile
imu-toys/imu-rpi-calibrator/src/: main.rs  registers.rs
imu-toys/imu-rpi-data-collect/: .gitignore  Cargo.toml  Makefile
imu-toys/imu-rpi-data-collect/src/: main.rs  registers.rs
mini-mount/: Cargo.toml
mini-mount/src/: lib.rs
mini-tracker/: Cargo.toml
mini-tracker/src/: lib.rs
mouse-sensor-toys/generate-anoto/: generate_anoto_grid.py  generate_anoto_grid_center_marked_up_dots.py  generate_anoto_grid_no_up_dots.py  generate_dot_grid.py  generate_test_cases.py  pyproject.toml  simulate_image_capture.py
mouse-sensor-toys/mouse-nrf52-camera/: Cargo.toml  generate_dot_grid.py  visualize.py
mouse-sensor-toys/mouse-nrf52-camera/.cargo/: config.toml
mouse-sensor-toys/mouse-nrf52-camera/src/: main.rs  registers.rs  srom.rs
mouse-sensor-toys/mouse-vision/: Cargo.toml
mouse-sensor-toys/mouse-vision/src/: lib.rs
mouse-sensor-toys/mouse-vision/tests/: grid.rs
mouse-sensor-toys/mouse-vision/tests/samples/: 0_4_1748027490.json  1_5_1748027468.json  1_dot_1748027070.json  1_dot_1748027105.json  2_2_1748027365.json  2_2_45_deg_1748027399.json  5_4_1748027422.json  5_4_45_deg_1748027447.json  6_3_1748027518.json  empty_1748027042.json  empty_1748027122.json  empty_1748027135.json  empty_1748027144.json  empty_1748027160.json  grid_1_spacing_1748026789.json  grid_1_spacing_1748026825.json  grid_1_spacing_45_deg_1748026860.json  grid_2_spacing_1748026902.json  grid_2_spacing_1748026902_answer.json  grid_2_spacing_1748026936.json  grid_2_spacing_45_deg_1748026976.json  grid_3_spacing_1748027005.json  grid_3_spacing_1748027026.json  grid_on_screen_1748028855.json  line_1748027232.json  line_1748027258.json
mouse-sensor-toys/nrf52-paw3395-calibrator/: Cargo.toml  capture.py
mouse-sensor-toys/nrf52-paw3395-calibrator/src/: main.rs
mouse-sensor-toys/nrf52-paw3395-camera/: Cargo.toml  visualize.py
mouse-sensor-toys/nrf52-paw3395-camera/src/: main.rs
mouse-sensor-toys/nrf52-paw3395-locator/: Cargo.toml  visualize.py
mouse-sensor-toys/nrf52-paw3395-locator/src/: main.rs
mouse-sensor-toys/solve-anoto/: .gitignore  main.py  pyproject.toml
mouse-sensor-toys/solve-anoto-rust/: Cargo.toml  pyproject.toml
mouse-sensor-toys/solve-anoto-rust/src/: main.rs
orientation_and_centering/nrf52-serial/: Cargo.toml  memory.x
orientation_and_centering/nrf52-serial/src/: main.rs
orientation_and_centering/screen-orientation/: Cargo.toml
orientation_and_centering/screen-orientation/src/: main.rs
orientation_and_centering/serial-common/: Cargo.toml
orientation_and_centering/serial-common/src/: lib.rs
raspberry-pi-demo/: Cargo.toml
raspberry-pi-demo/src/: main.rs
schematics_and_boards/: .gitignore
schematics_and_boards/battery_mount/: battery_mount.kicad_pcb  battery_mount.kicad_pro  battery_mount.kicad_sch  fp-lib-table  sym-lib-table
schematics_and_boards/mini base/: mini base.kicad_pcb  mini base.kicad_pro  mini base.kicad_sch  panel_config.json
schematics_and_boards/mini base framed/: mini base framed.kicad_pcb  mini base framed.kicad_pro
schematics_and_boards/mini base v2/: fp-lib-table  mini base v2.kicad_pcb  mini base v2.kicad_pro  mini base v2.kicad_sch  panel_config.json  sym-lib-table
schematics_and_boards/table IR receivers and emitters/: .gitignore  table IR receivers and emitters.kicad_pcb  table IR receivers and emitters.kicad_pro  table IR receivers and emitters.kicad_sch
schematics_and_boards/table board joiners/: panel_config.json  table board joiners.kicad_pcb  table board joiners.kicad_pro  table board joiners.kicad_sch
schematics_and_boards/table board joiners panel/: table board joiners panel.kicad_pcb  table board joiners panel.kicad_pro
screen-demo/: Cargo.toml
screen-demo/src/: main.rs
screen-nrf52-sync-demo/btletoy/: Cargo.toml
screen-nrf52-sync-demo/btletoy/src/: main.rs
screen-nrf52-sync-demo/common/: Cargo.toml
screen-nrf52-sync-demo/common/src/: btle_constants.rs  lib.rs
screen-nrf52-sync-demo/nrf52/: .gitignore  Cargo.toml  Readme.md
screen-nrf52-sync-demo/nrf52/src/: main.rs
screen-nrf52-sync-demo/screen-nrf52/: Cargo.toml
screen-nrf52-sync-demo/screen-nrf52/src/: main.rs  mini.rs
screen-rpi-sync-demo/raspi/: Cargo.toml
screen-rpi-sync-demo/raspi/src/: main.rs
screen-rpi-sync-demo/screen/: Cargo.toml
screen-rpi-sync-demo/screen/src/: main.rs
simulator/: Cargo.toml
simulator/src/: main.rs
test-firmware/: Cargo.toml
test-firmware/.cargo/: config.toml
test-firmware/src/: main.rs
visualizer/: Cargo.toml
visualizer/src/: main.rs  vis_bounding_box.rs  vis_iterating_solver.rs  vis_receivers.rs
