[workspace]
resolver = "2"
members = [
    "simulator",
    "mini-mount",
    "mini-tracker",
    "visualizer",
    "find_worst_case",
    "screen-demo",
    "raspberry-pi-demo",
    "data-collector-screen",
    "data-collector-rpi",
    "screen-rpi-sync-demo/screen",
    "screen-rpi-sync-demo/raspi",
    "screen-nrf52-sync-demo/btletoy",
    "screen-nrf52-sync-demo/common",
    "screen-nrf52-sync-demo/screen-nrf52",
    "orientation_and_centering/screen-orientation",
    "orientation_and_centering/serial-common",
    "imu-toys/imu-rpi-data-collect",
]
exclude = [
    "test-firmware",
    "screen-nrf52-sync-demo/nrf52",
    "orientation_and_centering/nrf52-serial",
]
