[workspace]
members = [
    "simulator",
    "mini-mount",
    "mini-tracker",
    "visualizer",
    "find_worst_case",
    "screen-demo",
    "raspberry-pi-demo",
    "data-collector-screen",
    "data-collector-rpi",
    "screen-rpi-sync-demo/screen",
    "screen-rpi-sync-demo/raspi",
    "screen-nrf52-sync-demo/btletoy",
    "screen-nrf52-sync-demo/common",
    "screen-nrf52-sync-demo/screen-nrf52",
    "orientation_and_centering/screen-orientation",
    "orientation_and_centering/serial-common",
    "imu-toys/imu-rpi-data-collect",
    "imu-toys/imu-processing-tests",
    "imu-toys/imu-rpi-calibrator",
    "mouse-sensor-toys/mouse-vision",
    "mouse-sensor-toys/solve-anoto-rust",
]
resolver = "2"
exclude = [
    "test-firmware",
    "screen-nrf52-sync-demo/nrf52",
    "orientation_and_centering/nrf52-serial",
    "imu-toys/imu-nrf52-calibrator",
    "mouse-sensor-toys/mouse-nrf52-camera",
    "mouse-sensor-toys/nrf52-paw3395-camera",
    "mouse-sensor-toys/nrf52-paw3395-locator",
    "duck-hunt-firmwares/",
    "mouse-sensor-toys/nrf52-paw3395-calibrator",
]
