[package]
name = "visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
speedy2d = "1.12.0"
mini-mount = { path = "../mini-mount" }
mini-tracker = { path = "../mini-tracker" }
float-cmp = "0.9.0"
