[package]
name = "imu-rpi-data-collect"
version = "0.1.0"
edition = "2021"

[dependencies]
rppal = { version = "0.19.0", features = ["hal"] }
anyhow = "1.0.86"
lsm6dsox = "1.0.1"
modular-bitfield-msb = "0.11.2"
byteorder = { version = "1.5.0", default-features = false }
imu-fusion = "0.2.4"
log = "0.4.22"
env_logger = "0.11.5"
