[package]
name = "mouse-vision"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = { version = "0.7.6", default-features = false }
libm = "0.2.13"
image = "0.25.6"


[dev-dependencies]
serde_json = "1.0.140"

[profile.release]
# `lto = true` should also work
lto = 'fat'

[features]
std = []
debug = []
