[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
binary_serde = "1.0.24"
num_enum = { version = "0.7.3", default-features = false }
serde = { version = "1.0.208", default-features = false, features = ["derive"] }
uuid = { version = "1.10.0", default-features = false }

[[bin]]
name = "dump-uuid"
path = "src/bin/dump_uuid.rs"
