[package]
name = "screen-nrf52"
version = "0.1.0"
edition = "2021"

[dependencies]
crc = "3.2.1"
speedy2d = "2.1.0"
btleplug = "0.11.5"
env_logger = "0.11.5"
futures = "0.3.30"
log = "0.4.22"
tokio = { version = "1.39.2", features = ["full"] }
uuid = "1.10.0"
common = { path = "../common" }
binary_serde = "1.0.24"
anyhow = "1.0.86"
tokio-stream = { version = "0.1.15", features = ["full"] }
